-
Bug
-
Resolution: Done
-
P1: Critical
-
4.8.4
-
None
-
VS 2010
-
d8f940930e0dbcea4ee136550b4ca5a38f03b1dc
I got bitten by a problem similar to this
So I need to explicitly set /MACHINE for a static library.
It seems like the undocumented QMAKE_LIBFLAGS works in nmake mode but it's completely ignored for VS project files.
I tried 'QMAKE_LIBFLAGS += $${QMAKE_LFLAGS}' but of course this is flawed since LFLAGS_RELEASE and so on isn't included.
I don't know how much overlap there is for link and lib commandline flags but at least some of them are the same, like the needed /MACHINE option.
So maybe qmake could extract relevant options from LFLAGS or provide some other way to properly specify librarian flags without too much redundancy.
- relates to
-
QTBUG-44726 Add a QMAKE_RANLIB_FLAGS variable
-
- Open
-