vcxproj: fix writing of librarian settings

The settings of the librarian were never written.
Creation of static libraries only worked by accident.
Adapted the code from the vcproj code path.

Task-number: QTBUG-30712
Change-Id: I69917f44305eb458647392d222db477fe5a5b7c8
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@theqtcompany.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>
Reviewed-by: Andy Shaw <andy.shaw@digia.com>

cregit: d8f940930e0dbcea4ee136550b4ca5a38f03b1dc https://github.com/qt/qtbase/commit/d8f940930e0dbcea4ee136550b4ca5a38f03b1dc